kubernetes/wordpress-service-lb.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "wordpress-lb"
  namespace: "default"
  labels:
    app: "wordpress"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: "wordpress"
  type: "LoadBalancer"
  loadBalancerIP: ""
